--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Shooting Shapes</title>
+    <title>Unity WebGL Player | Round Revenger</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Shooting Shapes</div>
+        <div id="unity-build-title">Round Revenger</div>
       </div>
     </div>
     <script>
@@ -58,12 +58,12 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Round Revenger WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Round Revenger WebGL.data.br",
-        frameworkUrl: buildUrl + "/Round Revenger WebGL.framework.js.br",
-        codeUrl: buildUrl + "/Round Revenger WebGL.wasm.br",
+        dataUrl: buildUrl + "/Round Revenger WebGL.data",
+        frameworkUrl: buildUrl + "/Round Revenger WebGL.framework.js",
+        codeUrl: buildUrl + "/Round Revenger WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Shooting Shapes",
+        productName: "Round Revenger",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
